sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:15: error: ';' expected but ',' found.
si ces deux pots sont alignés dans le bon ordre, le
                                               ^AlgGnomeSort:16: error: ';' expected but ',' found.
nain se déplace en avant d'un pot de fleurs, sinon
                                           ^AlgGnomeSort:17: error: ';' expected but symbol literal found.
il les échange et se déplace en arrière d'un pot de
                                         ^AlgGnomeSort:18: error: ';' expected but symbol literal found.
fleur. Condition aux limites : si il n'y a pas de pot
                                      ^AlgGnomeSort:19: error: ';' expected but ',' found.
de fleurs précédent, le nain avance ; si il n'y a pas
                   ^AlgGnomeSort:19: error: ';' expected but symbol literal found.
de fleurs précédent, le nain avance ; si il n'y a pas
                                             ^AlgGnomeSort:24: error: identifier expected but '}' found.
}
^