sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
for (i <- 1 à getNombreValeurs){
	if(plusPetit(i-1,i) && plusPetit(i,i+1)){
		i = i + 1
	}
	else {
		echange(i-1,i+1)
		i = i - 1
	}
}
}
Le nain regarde le pot de fleur qui est à côté de lui
et il regarde également le pot de fleurs précédent;
si ces deux pots sont alignés dans le bon ordre, le
nain se déplace en avant d'un pot de fleurs, sinon
il les échange et se déplace en arrière d'un pot de
fleur. Condition aux limites : si il n'y a pas de pot
de fleurs précédent, le nain avance ; si il n'y a pas
de pot suivant alors il a terminé sa tâche.
